--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@chasemoskal/snapstate",
-	"version": "0.0.0-dev.2",
+	"name": "snapstate",
+	"version": "0.0.0-dev.3",
 	"description": "tiny robust state management",
 	"license": "MIT",
 	"author": "Chase Moskal <chasemoskal@gmail.com>",
@@ -15,8 +15,8 @@
 		"clean": "rimraf x && mkdirp x",
 		"compile": "tsc",
 		"watch": "npm run compile -s -- --watch",
-		"test": "cynic node x/deepstate.test.js",
-		"test-debug": "node inspect node_modules/cynic/dist/cli.js node x/deepstate.test.js"
+		"test": "cynic node x/snapstate.test.js",
+		"test-debug": "node inspect node_modules/cynic/dist/cli.js node x/snapstate.test.js"
 	},
 	"keywords": [
 		"state",
