--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,11 +22,8 @@ jobs:
     - name: 📦 install dependencies
       run: npm ci
 
-    - name: 🔨 build
+    - name: 🔨🧪 build and test
       run: npm run build
-
-    - name: 🧪 test
-      run: npm test
 
     - name: 🚀 npm publish
       uses: JS-DevTools/npm-publish@v1
