--- a/package.json
+++ b/package.json
@@ -18,6 +18,16 @@
 		"test": "cynic node x/tests.test.js",
 		"test-debug": "node inspect node_modules/cynic/dist/cli.js node x/tests.test.js"
 	},
+	"dependencies": {
+		"mongodb": "^4.3.1"
+	},
+	"devDependencies": {
+		"cynic": "0.1.0-dev.16",
+		"mkdirp": "^1.0.4",
+		"npm-run-all": "^4.1.5",
+		"rimraf": "^3.0.2",
+		"typescript": "^4.5.4"
+	},
 	"keywords": [
 		"state",
 		"state-management"
@@ -29,15 +39,5 @@
 	"bugs": {
 		"url": "https://github.com/chase-moskal/snapstate/issues"
 	},
-	"homepage": "https://github.com/chase-moskal/snapstate#readme",
-	"devDependencies": {
-		"cynic": "0.1.0-dev.16",
-		"mkdirp": "^1.0.4",
-		"npm-run-all": "^4.1.5",
-		"rimraf": "^3.0.2",
-		"typescript": "^4.5.4"
-	},
-	"dependencies": {
-		"mongodb": "^4.3.1"
-	}
+	"homepage": "https://github.com/chase-moskal/snapstate#readme"
 }
