--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
 		"test-debug": "node inspect node_modules/cynic/dist/cli.js node x/tests.test.js"
 	},
 	"devDependencies": {
-		"cynic": "0.1.0-dev.16",
+		"cynic": "^0.2.0",
 		"mkdirp": "^1.0.4",
 		"npm-run-all": "^4.1.5",
 		"rimraf": "^3.0.2",
-		"typescript": "^4.5.4"
+		"typescript": "^4.9.4"
 	},
 	"keywords": [
 		"state",
